# GAMES101

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md
hw0/: CMakeLists.txt  main.cpp
hw1/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
hw2/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
hw3/: CMakeLists.txt  OBJ_Loader.h  Shader.hpp  Texture.hpp  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
hw4/: CMakeLists.txt  main.cpp
hw5/: CMakeLists.txt  Light.hpp  Object.hpp  Renderer.cpp  Sphere.hpp  Triangle.hpp  main.cpp
hw6/: AreaLight.hpp  BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Intersection.hpp  Light.hpp  Material.hpp  OBJ_Loader.hpp  Object.hpp  Ray.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  main.cpp
hw7/: AreaLight.hpp  BVH.cpp  Bounds3.hpp  CMakeLists.txt  Light.hpp  Material.hpp  Object.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  main.cpp
hw8/: CMakeLists.txt
hw8/CGL/: CMakeLists.txt
hw8/CGL/include/CGL/: osdtext.h  quaternion.h
hw8/CGL/src/: CMakeLists.txt  osdfont.h  osdtext.h
hw8/src/: CMakeLists.txt  application.cpp  application.h  getopt.c  getopt.h  main.cpp  mass.h  rope.cpp  rope.h  spring.h
